--- a/all-projects.html
+++ b/all-projects.html
@@ -6,28 +6,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>	
 </head>
 <body>
-<div id="headerDiv"></div>
-<div class="container py-5">
-	<div class="row">
-		<div class="col-md-10 offset-md-1">
-		  	<div class="form-group">
-				<label id="projectsLabel" for="projects">All projects:</label>
-				<textarea class="form-control" rows="5" id="projects"></textarea>
+<div id="container">
+	
+	<div id="header"></div>
+	<div id="body" class="container py-5">
+		<div class="row">
+			<div class="col-md-10 offset-md-1">
+				<div class="row">
+						<div class="col-md-4 offset-md-4">
+							<div class="btn-group btn-group-lg" role="group" aria-label="Bla bla">
+							    <button id="all" onclick="initAccordion(this)"  type="button" class="btn btn-secondary">ALL</button>
+							    <button id="doing" onclick="initAccordion(this)" type="button" class="btn btn-secondary">DOING</button>
+							    <button id="done" onclick="initAccordion(this)"  type="button" class="btn btn-secondary">DONE</button>
+							</div>
+						</div>
+						<div class="col-md-2 offset-md-2" >
+							<button id="add-button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Add project <i class="fa fa-folder"></i> </button>
+						</div>
+				</div>
 			</div>
-	  </div>
-  	</div>
+			<div id="accordionDiv" class="col-md-10 offset-md-1">
+			</div>
+			<div id="add-project-modal"></div>
+			<div id="view-details-modal"></div>
+		</div>
+	</div>
+
+	<footer class="footer" id="footer"></footer>
 </div>
+
 <script type="text/javascript">
 	$( document ).ready(function() {
-		$("#headerDiv").load("header.html");
+		$("#header").load("header.html");
+		$("#footer").load("footer.html");
+		$("#add-project-modal").load("add-project.html");
+		$("#view-details-modal").load("project-details.html");
+		
 		var userFullName = localStorage['firstName'] + ' ' + localStorage['lastName'];
 		var userFirstName = localStorage['firstName'];
 		$('#userDropdownText').text('Hello, ' + userFirstName);
+
+		initAccordion(document.getElementById("all"));
 	});
+
+	$(window).on('load', function(){
+		reloadAccordion();
+	});
+
 </script>
 </body>
 </html>
