--- a/header.html
+++ b/header.html
@@ -1,29 +1,40 @@
-<nav class="navbar px-5 navbar-dark bg-dark navbar-expand-lg">
-	  <a class="navbar-brand" href="#">Mosquito</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNav">
-	    <ul class="nav nav-tabs ml-auto">
-	      	<li class="nav-item">
-	        	<a class="nav-link" id="my-work-link" href="my-work.html">My work</a>
-	      	</li>
-	      	<li class="nav-item">
-		        <a class="nav-link" id="my-projects-link" href="my-projects.html">My projects</a>
-	      	</li>
-	      	<li class="nav-item">
-		        <a class="nav-link" id="all-projects-link" href="all-projects.html">All projects</a>
-	      	</li>
-	    	<li id="userDropdown" class="nav-item dropdown pl-5">
-				<a id="userDropdownText" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"></a>
-				<div class="dropdown-menu">
-					<a class="dropdown-item" href="my-profile.html">My profile</a>
-					<a class="dropdown-item" href="#">Log out</a>
-				</div>
-			</li>
-	    </ul>
-	  </div>
-	</nav>	
+
+
+<nav class="navbar navbar-expand-md bg-dark navbar-dark" id="main-custom-navbar">
+  <!-- Brand -->
+  <a class="navbar-brand" href="#"><img id="mosquito-logo" src="img/mosquito.png"> MosquitoTM</a>
+
+  <!-- Toggler/collapsibe Button -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <!-- Navbar links -->
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" id="my-work-link" href="my-work.html">My work</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="my-projects-link" href="my-projects.html">My projects</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="all-projects-link" href="all-projects.html">All projects</a>
+      </li>
+	  <li class="nav-item nav-icons">
+	    <a class="nav-link" href="my-profile.html">
+	       <i class="fas fa-user-edit user-nav-icon"></i>
+	    </a>
+	    </li>
+	    <li class="nav-item">
+	    	<a class="nav-link" href="logout.html">
+	    <i class="fas fa-sign-out-alt user-nav-icon"></i>
+	       </a>
+	    </li> 
+    </ul>
+  </div> 
+</nav>
+
 <script type="text/javascript">
 	$( document ).ready(function() {
 		var fileName = document.location.pathname.match(/[^\/]+$/)[0];
