--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
-<div class="containter" style="padding-top: 8px;">
-  <p class="text-muted" style="text-align: center; margin: auto">MosquitoTM 2018</p>
+<div class="containter">
+  <p><img id="mosquito-footer-logo" src="img/mosquito.png"> MosquitoTM &copy; 2018<script>new Date().getFullYear()>2018&&document.write("-"+new Date().getFullYear());</script></p>
 </div>
