--- a/my-profile.html
+++ b/my-profile.html
@@ -52,7 +52,7 @@
                                         <div id="specialization-block">
 		                    				<div class="form-check" id="specializations"></div>
   										</div>
-                                    </div>
+  									</div>
                                 </div>
                                 <div class="form-group row">
                                     <label class="col-lg-3 col-form-label form-control-label">Password</label>
@@ -76,6 +76,11 @@
                             </form>
                         </div>
                     </div>
+                  </div>
+                </div>
+               </div>
+
+                    
 <script type="text/javascript">
 	var properties = {
   		API_HOST: 'http://localhost:8080/',
@@ -91,7 +96,6 @@
 	    	headers: {"Authorization": sessionStorage.getItem('token')},
 	    	dataType: 'json',
 	    	success: function(data) {
-            alert($('#email').val(data.email));
 	    			$('#email').val(data.email);
 	    			$('#firstName').val(data.firstName);
 	    			$('#lastName').val(data.lastName);
@@ -108,6 +112,8 @@
     	
 
 	$(document).ready(function() {
+    $("footer").load("footer.html");
+
 		// populate specialization block
 		$.ajax({
 			async: false,
