--- a/my-projects.html
+++ b/my-projects.html
@@ -25,7 +25,7 @@
 			<div class="col-md-10 offset-md-1">
 				<div class="row">
 						<div class="col-md-4 offset-md-4">
-							<div class="btn-group btn-group-lg" role="group">
+							<div class="btn-group btn-group-lg" id="status-work-btn" role="group">
 							    <button id="all" onclick="initAccordion(this)"  type="button" class="btn btn-secondary">ALL</button>
 							    <button id="doing" onclick="initAccordion(this)" type="button" class="btn btn-secondary">DOING</button>
 							    <button id="done" onclick="initAccordion(this)"  type="button" class="btn btn-secondary">DONE</button>
@@ -33,9 +33,6 @@
 						</div>
 						<div class="col-md-2 offset-md-2" >
 							<button id="add-project" class="btn" data-toggle="modal"  data-target="#myModal" >Add project <i class="fas fa-plus"></i> </button>
-
-							<button data-id="2" class="btn add-task-btn" data-toggle="modal" data-target="#myTaskCreateModal">Add task <i class="fas fa-plus"></i></button>
-							
 						</div>
 				</div>
 			</div>
@@ -105,14 +102,14 @@
 		</div>
 	</div>
 
-	<footer class="footer" id="footer"></footer>
+	<footer class="footer" id="main-footer"></footer>
 </div>
 
 <script src="js/script.js"></script>
 <script type="text/javascript">
 	$( document ).ready(function() {
 		$("#header").load("header.html");
-		$("#footer").load("footer.html");
+		$("footer").load("footer.html");
 
 		$("#add-project-modal").load('add-project.html');
 		$("#view-details-modal").load("project-details.html");
