--- a/my-work.html
+++ b/my-work.html
@@ -22,10 +22,10 @@
 			<div class="col-md-10 offset-md-1">
 				<div class="row">
 					<div class="col-md-4 offset-md-4">
-						<div class="btn-group btn-group-lg" role="group" aria-label="Bla bla">
-						    <button id="all" onclick="getMyWork(this)"  type="button" class="btn btn-secondary">ALL</button>
-						    <button id="doing" onclick="getMyWork(this)" type="button" class="btn btn-secondary">DOING</button>
-						    <button id="done" onclick="getMyWork(this)"  type="button" class="btn btn-secondary">DONE</button>
+						<div class="btn-group btn-group-lg" id="status-work-btn" role="group">
+						    <button id="all" onclick="getMyWork(this)"  type="button" class="btn">ALL</button>
+						    <button id="doing" onclick="getMyWork(this)" type="button" class="btn">DOING</button>
+						    <button id="done" onclick="getMyWork(this)"  type="button" class="btn">DONE</button>
 						</div>
 					</div>
 				</div>
@@ -36,7 +36,7 @@
 		</div>
 	</div>
 
-	<footer class="footer" id="footer"></footer>
+	<footer class="footer" id="main-footer"></footer>
 </div>
 
 <script type="text/javascript">
@@ -46,7 +46,7 @@
 		$('#userDropdownText').text('Hello, ' + userFirstName);
 		*/
 		$("#header").load("header.html");
-		$("#footer").load("footer.html");
+		$("footer").load("footer.html");
 		$("#view-details-modal").load("project-details.html");
 		
 		getMyWork(document.getElementById("all"));
