--- a/add-project.html
+++ b/add-project.html
@@ -186,7 +186,7 @@
         
 		$.ajax({
 		    type: "POST",
-		    url: properties.API_HOST + properties.API_ROOT + "tasks",
+		    url: properties.API_HOST + properties.API_ROOT + "projects",
 		    headers: {"Authorization": sessionStorage.getItem('token')},
 		    contentType: "application/json; charset=utf-8",
 		    dataType: "json",
