--- a/registration.html
+++ b/registration.html
@@ -55,8 +55,8 @@
                                         <p id="status" class="d-none text-danger"></p>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                        <input type="button" id="submit" class="btn btn-success btn-lg float-right" value="Register">
+                                <div class="form-group  text-center">
+                                        <input type="button" id="submit" class="btn" value="Register">
                                 </div>
                
                             </form>
