--- a/login.html
+++ b/login.html
@@ -46,8 +46,8 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                		<input type="button" id="registration" class="btn btn-info btn-lg float-left register-btn" value="Regiter">
-                                        <input type="button" id="submit" class="btn btn-success btn-lg float-right login-btn" value="Login">
+                                		<input type="button" id="registration" class="btn float-left register-btn" value="Regiter">
+                                        <input type="button" id="submit" class="btn float-right login-btn" value="Login">
                                 </div>
                
                             </form>
