--- a/project-details.html
+++ b/project-details.html
@@ -123,8 +123,9 @@
             <div id="comment-list-block" class="d-none">
                 <hr class="hr-details">
                 <h4 class="row font-weight-bold justify-content-center">Comments</h4>
-                
-                <div id="comment-display-area"></div>
+                <p id="comments-info-block" class="text-danger text-center"></p>
+                <div id="comment-display-area">
+                </div>
 
                 <div class="row">
                     <div class="col-md-12">
