Added logout and filter for tasks

--- a/my-work.html
+++ b/my-work.html
@@ -23,9 +23,9 @@
 				<div class="row">
 					<div class="col-md-4 offset-md-4">
 						<div class="btn-group btn-group-lg" id="status-work-btn" role="group">
-						    <button id="all" onclick="getMyWork(this)"  type="button" class="btn">ALL</button>
-						    <button id="doing" onclick="getMyWork(this)" type="button" class="btn">DOING</button>
-						    <button id="done" onclick="getMyWork(this)"  type="button" class="btn">DONE</button>
+						    <button id="all" onclick="initAccordion(this)"  type="button" class="btn">ALL</button>
+						    <button id="doing" onclick="initAccordion(this)" type="button" class="btn">DOING</button>
+						    <button id="done" onclick="initAccordion(this)"  type="button" class="btn">DONE</button>
 						</div>
 					</div>
 				</div>
