--- a/project-details.html
+++ b/project-details.html
@@ -79,6 +79,14 @@
                 <form method="POST">
                     <div class="form-group row">
                         <div class="col-md-3">
+                            <label for="logwork-description" class="font-weight-bold col-md-3">Description</label>
+                        </div>
+                        <div class="col-md-9">
+                            <input type="text" id="logwork-description" name="" class="form-control" placeholder="Add description your work" required="true">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-3">
                             <label for="logged-time" class="font-weight-bold col-md-3">Logged</label>
                         </div>
                         <div class="col-md-9">
