Added todo filter for tasks

--- a/project-details.html
+++ b/project-details.html
@@ -82,7 +82,7 @@
                             <label for="logwork-description" class="font-weight-bold col-md-3">Description</label>
                         </div>
                         <div class="col-md-9">
-                            <input type="text" id="logwork-description" name="" class="form-control" placeholder="Add description your work" required="true">
+                            <input type="text" id="logwork-description" name="" class="form-control" placeholder="Add description of your work" required="true">
                         </div>
                     </div>
                     <div class="form-group row">
