--- a/all-projects.html
+++ b/all-projects.html
@@ -128,6 +128,15 @@
 		});
 
 		initAccordion(document.getElementById("all"));
+
+		 $(".setsize").each(function() {
+        $(this).height($(this).width());
+    });
+});
+$(window).on('resize', function(){
+    $(".setsize").each(function() {
+        $(this).height($(this).width());
+    });
 	});
 
 	$(window).on('load', function(){
