--- a/project-details.html
+++ b/project-details.html
@@ -115,6 +115,13 @@
             <div id="log-work-list" class="d-none">
                 <hr class="hr-details">
                 <h4 class="row font-weight-bold justify-content-center">Log-works</h4>
+                <p id="logwork-info-block" class="text-danger text-center"></p>
+                <div id="logwork-display-area"></div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button id="close-logwork-list-btn" class="btn float-left">Close</button>
+                    </div>
+                </div>
                  <hr class="hr-details">
             </div>
 
