--- a/project-details.html
+++ b/project-details.html
@@ -169,7 +169,7 @@
             
             <div class="row">
                 <div class="col-12">
-                    <p id="status" style="color:red;" class="d-none"></p>
+                    <p id="status" class="text-center text-danger d-none"></p>
                 </div>
             </div>
 
