--- a/my-work.html
+++ b/my-work.html
@@ -78,7 +78,7 @@
 				                      </div>
 				                    <div class="form-row">
 				                        <div class="col-12">
-				                            <p id="status" style="color:red;" class="d-none"></p>
+				                            <p id="status-add-task" class="d-none text-center text-danger"></p>
 				                        </div>
 				                    </div>
 				                    <div class="form-row">
