--- a/all-projects.html
+++ b/all-projects.html
@@ -20,7 +20,10 @@
 		<div class="row">
 			<div class="col-md-10 offset-md-1">
 				<div class="row">
-						<div class="col-md-5 offset-md-3">
+						<div class="col-md-3 offset-md-1">
+							<button id="add-trello" class="btn">Add trello <i class="fab fa-trello"></i></button>
+						</div>
+						<div class="col-md-5">
 							<div class="btn-group btn-group-lg" role="group" id="status-work-btn">
 							    <button id="all" onclick="initAccordion(this)"  type="button" class="btn btn-secondary">ALL</button>
 							     <button id="todo" onclick="initAccordion(this)"  type="button" class="btn btn-secondary">TODO</button>
