--- a/my-projects.html
+++ b/my-projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Home page | my work</title>
+  <title>MosquitoTM | My Projects</title>
   <meta charset="utf-8">
   <meta http-equiv="Cache-control" content="no-cache">
   <meta name="viewport" content="width=device-width, initial-scale=1">
