--- a/my-projects.html
+++ b/my-projects.html
@@ -48,7 +48,7 @@
 				    
 				    <div class="modal-content">
 				      <div class="modal-header">
-				        <h4 class="modal-title">Add sub-task</h4>
+				        <h4 class="modal-title">Add Task</h4>
 				        <button type="button" class="close" data-dismiss="modal">&times;</button>
 				      </div>
 				      <div class="modal-body">
